crates/tui/tests/storybook/snapshots/app_message::user_message_block_single_line.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---

 refactor the parser into its own module


──────────────────────────────────────────────────

──────────────────────────────────────────────────
 ○ normal                                 1:1 100%
