crates/tui/tests/storybook/snapshots/app_message::user_message_block_slash_command_accent.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---

 /permissions


────────────────────────────────────────

────────────────────────────────────────
 ○ normal                       1:1 100%
