crates/tui/tests/storybook/snapshots/app_message::user_message_block_slash_command_accent.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 345
expression: frame.styles_text()
---
dim: 40 8
  0   0  39 bg=AnsiValue(236)
  1   0   1 bg=AnsiValue(236)
  1   1  12 fg=AnsiValue(208) bg=AnsiValue(236) attrs=bold
  1  13  26 bg=AnsiValue(236) attrs=bold
  2   0  39 bg=AnsiValue(236)
  5   1   1 fg=Black bg=White
  7   0  10 fg=AnsiValue(244) bg=AnsiValue(233)
  7  10  30 bg=AnsiValue(233)
