crates/tui/tests/storybook/snapshots/app_notify::notify_error_clips_long_summary.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---

 error  /upgrade: cargo install exited
─────────────────────────────────────  ─

────────────────────────────────────────
