crates/tui/tests/storybook/snapshots/app_notify::notify_error_clips_long_summary.styles.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.styles_text()
---
dim: 40 6
  1   2   5 fg=AnsiValue(9) attrs=bold
  1   9  28 attrs=dim
  2   0  40 fg=AnsiValue(237)
  3   1   1 fg=Black bg=White
  4   0  40 fg=AnsiValue(237)
  5   0  10 fg=AnsiValue(244) bg=AnsiValue(234)
  5  10  22 bg=AnsiValue(233)
  5  32   8 fg=AnsiValue(244) bg=AnsiValue(233)
