crates/tui/tests/storybook/snapshots/app_notify::notify_info_short_body_renders_verbatim.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---

 info  checking for upgrades…
────────────────────────────────────────

────────────────────────────────────────
 ○ normal
