crates/tui/tests/storybook/snapshots/app_notify::notify_logs_to_messages_with_source.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
assertion_line: 344
expression: frame.text()
---






─ messages (2) ───────────────────────────────────────────────────────
 [error] upgrade
   /upgrade: cargo install exited 101
   error: multiple packages with binaries

 [info] upgrade
   update available: v0.6.0
 ○ normal                                                       1:1 0%
