crates/tui/tests/storybook/snapshots/app_notify::notify_refits_after_resize.snap
---
source: crates/tui/tests/storybook/app_ctx.rs
expression: frame.text()
---

  info  update available: v0…
────────────────────────────────

────────────────────────────────
 ○ normal               1:1 100%
